+manual copy; JDK 24